@@ -1,3 +1,7 @@
+2007-03-31  Robert Ancell <robert.ancell@gmail.com>
+
+	* src/lib/game_selector.py Make sure one game is always selected for restoring (Bug #422748)
+
 2007-03-25  Robert Ancell <robert.ancell@gmail.com>
 
 	* Use string substitution using dictionary lookups when using ngettext to stop
